--- a/playground/Makefile
+++ b/playground/Makefile
@@ -12,15 +12,19 @@ vars:
 cover:
 	# Playground code is not covered
 
+OUTPIPE=
+test: OUTPIPE=1> /dev/null
+test: test-bogus test-display test-corruption
+
 test-bogus:
-	go run bogus/bogus.go
-	go run -race bogus/bogus.go -bogus 2>&1 | grep "DATA RACE"
+	go run bogus/bogus.go $(OUTPIPE)
+	go run -race bogus/bogus.go -bogus 2>&1 | grep -q "DATA RACE"
 
 test-display:
-	go run display/display.go -t 0.5s
+	go run display/display.go -t 0.5s $(OUTPIPE)
 
 test-corruption:
-	go run corruption/corruption.go
+	go run corruption/corruption.go $(OUTPIPE)
 
 test-foreach:
 	go test -bench="ForEach*" ./generics/...
