--- a/batsub/Makefile
+++ b/batsub/Makefile
@@ -5,9 +5,8 @@ test:
 	go test -race -timeout 3s ./...
 	go vet ./...
 
-COVERSH=../scripts/cover.sh
 cover:
-	$(COVERSH) .
+	../scripts/cover.sh ./...
 
 cover-check: cover
-	go tool cover -html=.cache/cover.out
+	go tool cover -html=.cache/cover.profile
