mv batsub and add batbq

--- a/batchers/batbq/Makefile
+++ b/batchers/batbq/Makefile
@@ -6,7 +6,7 @@ test:
 	go vet ./...
 
 cover:
-	../scripts/cover.sh ./...
+	../../scripts/cover.sh ./...
 
 cover-check: cover
 	go tool cover -html=.cache/cover.profile
