add run example as test

--- a/batching/batbq/Makefile
+++ b/batching/batbq/Makefile
@@ -4,6 +4,7 @@ all: test cover
 test:
 	go test -race -timeout 3s ./...
 	go vet ./...
+	go run _examples/pubsub-to-bq/main.go -h 2> /dev/null
 
 cover:
 	../../scripts/cover.sh ./...
