--- a/batching/batbq/Makefile
+++ b/batching/batbq/Makefile
@@ -5,6 +5,7 @@ test:
 	go test -race -timeout 3s ./...
 	go vet ./...
 	go run _examples/pubsub-to-bq/main.go -h 2> /dev/null
+	go run _examples/simple/main.go -h 2> /dev/null
 
 cover:
 	../../scripts/cover.sh ./...
