rewrite scaling check, using observed batch size

--- a/batching/batbq/Makefile
+++ b/batching/batbq/Makefile
@@ -4,7 +4,7 @@ all: test cover
 test:
 	go test -race -timeout 3s ./...
 	go vet ./...
-	go run _examples/pubsub-to-bq/main.go -dry
+	go run _examples/ps2bq/main.go -dry
 	go run _examples/simple/main.go -dry
 
 cover:
