add kafka tests

--- a/kafka/Makefile
+++ b/kafka/Makefile
@@ -3,11 +3,16 @@
 # Start, stop and watch docker processes for local and integration testing.
 .PHONY: test cover up down status check wait run
 
-BN_FILE = docker-compose-bitnami.yml
-WM_FILE = docker-compose-wurstmeister.yml
-COMPOSE_FILE = $(BN_FILE)
-WAIT_TIME = 15
-HEATH_CHECK = nc -z localhost 9092
+# providers: wm, bn (Java), rpk (Go)
+KAFKA_PROVIDER  = rpk
+KAFKA_HOST      = localhost
+KAFKA_PORT      = 9092
+KAFKA_BROKER    = $(KAFKA_HOST):$(KAFKA_PORT)
+COMPOSE_FILE    = compose-$(KAFKA_PROVIDER).yml
+WAIT_TIME       = 15
+HEATH_CHECK     = nc -z $(KAFKA_HOST) $(KAFKA_PORT)
+NUM_EVENTS      = 10
+TIMEOUT         = 10s
 
 test:
 	go test -race ./...
@@ -18,11 +23,10 @@ cover:
 up:     ; docker-compose -f $(COMPOSE_FILE) up --no-recreate -d
 down:   ; docker-compose -f $(COMPOSE_FILE) down --remove-orphans
 status: ; docker-compose -f $(COMPOSE_FILE) ps
-check:  ; $(HEATH_CHECK)
+check:  ; $(HEATH_CHECK) -G 1
 wait:
 	# waiting for brokers...
-	for i in `seq $(WAIT_TIME)`; do \
-		printf "."; $(HEATH_CHECK) && break || sleep 1; false; done
+	for i in `seq $(WAIT_TIME)`; do printf "."; $(HEATH_CHECK) && break || false; done
 
 run:
-	go run -race cmd/buffertest/main.go -c 10
+	go run -race cmd/buffertest/main.go -c $(NUM_EVENTS) -b $(KAFKA_BROKER) -d $(TIMEOUT)
