--- a/kafka/compose-wm.yml
+++ b/kafka/compose-wm.yml
@@ -1,29 +1,29 @@
 version: '3'
 
 services:
-
   kafka:
     image: wurstmeister/kafka:2.13-2.6.0
     restart: on-failure:3
+    hostname: kafka
+    container_name: kafka
     links:
       - zookeeper
     ports:
-      - 9092:9092
+      - 29092:29092
     environment:
-      KAFKA_VERSION: '2.6.0'
+      KAFKA_VERSION: '2.13.0'
       KAFKA_ADVERTISED_HOST_NAME: 'localhost'
       KAFKA_ADVERTISED_PORT: '9092'
       KAFKA_ZOOKEEPER_CONNECT: 'zookeeper:2181'
       KAFKA_AUTO_CREATE_TOPICS_ENABLE: 'true'
-      KAFKA_LISTENERS: 'PLAINTEXT://:9092'
-      KAFKA_ADVERTISED_LISTENERS: 'PLAINTEXT://127.0.0.1:9092'
+      KAFKA_LISTENERS: 'PLAINTEXT://kafka:9092,PLAINTEXT_HOST://:29092'
+      KAFKA_ADVERTISED_LISTENERS: 'PLAINTEXT://kafka:9092,PLAINTEXT_HOST://localhost:29092'
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: 'PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT'
       KAFKA_DEFAULT_REPLICATION_FACTOR: 1
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
   zookeeper:
     image: wurstmeister/zookeeper
+    hostname: zookeeper
+    container_name: zookeeper
     ports:
       - 2181:2181
-
-volumes:
-  vault-volume:
-    driver: local
