refactor options system, separate scene loops

--- a/games/gotris/Makefile
+++ b/games/gotris/Makefile
@@ -1,4 +1,4 @@
-.PHONY: run test
+.PHONY: run test debug gui install
 
 test:
 	go test -race ./...
@@ -9,6 +9,9 @@ debug:
 
 run:
 	go run cmd/gotris/gotris.go
+
+gui:
+	go run cmd/gotris/gotris.go --platform fyne
 
 install:
 	go install cmd/gotris/gotris.go
