init cloudtables and add writer demo

--- a/kafka/Makefile
+++ b/kafka/Makefile
@@ -4,7 +4,7 @@
 .PHONY: test cover up down status check wait run
 
 # providers: wm, bn (Java), rpk (Go)
-KAFKA_PROVIDER  = rpk
+KAFKA_PROVIDER  = rpk.v23
 KAFKA_HOST      = localhost
 KAFKA_PORT      = 9092
 KAFKA_BROKER    = $(KAFKA_HOST):$(KAFKA_PORT)
@@ -13,6 +13,7 @@ WAIT_TIME       = 15
 HEATH_CHECK     = nc -z $(KAFKA_HOST) $(KAFKA_PORT)
 NUM_EVENTS      = 10
 TIMEOUT         = 10s
+ARGS            = -demo
 
 test:
 	go test -race ./...
@@ -30,3 +31,7 @@ wait:
 
 run:
 	go run -race cmd/buffertest/main.go -c $(NUM_EVENTS) -b $(KAFKA_BROKER) -d $(TIMEOUT)
+
+.PHONY: run-tables
+run-tables: bin/tables
+	go build -o $^ cmd/tables/main.go && $^ $(ARGS)
