--- a/internal/kafka/Makefile
+++ b/internal/kafka/Makefile
@@ -19,7 +19,7 @@ test:
 	go test -race ./...
 
 cover:
-	../scripts/cover.sh ./...
+	../../scripts/cover.sh ./...
 
 up:     ; docker-compose -f $(COMPOSE_FILE) up --no-recreate -d
 down:   ; docker-compose -f $(COMPOSE_FILE) down --remove-orphans
