update playground code

--- a/playground/Makefile
+++ b/playground/Makefile
@@ -1,31 +1,33 @@
-EXAMPLES = bogus corruption display
-TESTS    = $(addprefix test-,$(EXAMPLES))
+.PHONY: ⚙️
 
-.PHONY: all vars test $(TESTS)
+EXAMPLES = bogus corruption display foreach generics diff compat
+TESTS    = $(addprefix test-,$(EXAMPLES))
 
 all: vars $(TESTS)
 
-vars:
+vars: ⚙️
 	# dirs:  $(EXAMPLES)
 	# tests: $(TESTS)
 
-cover:
+cover: ⚙️
 	# Playground code is not covered
 
 OUTPIPE=
 test: OUTPIPE=1> /dev/null
-test: test-bogus test-display test-corruption
+test: ⚙️ $(TESTS)
 
-test-bogus:
+test-%: ⚙️
+	go test -v ./$* $(OUTPIPE)
+
+test-bogus: ⚙️
 	go run bogus/bogus.go $(OUTPIPE)
 	go run -race bogus/bogus.go -bogus 2>&1 | grep -q "DATA RACE"
 
-test-display:
+test-display: ⚙️
 	go run display/display.go -t 0.5s $(OUTPIPE)
 
-test-corruption:
+test-corruption: ⚙️
 	go run corruption/corruption.go $(OUTPIPE)
 
-test-foreach:
-	go test -bench="ForEach*" ./generics/...
-	go test -bench="Loop*"    ./generics/...
+test-foreach: ⚙️
+	go test -bench="All" ./generics/...
