--- a/playground/imgproc/Makefile
+++ b/playground/imgproc/Makefile
@@ -1,13 +1,13 @@
 
-.PHONY: all clean run
+.PHONY: ⚙️
 
-all: run
+all: ⚙️ run
 
-clean:
+clean: ⚙️
 	rm face.jpg face.raw
 
 face.raw:
 	python generate.py
 
-run: face.raw
+run: ⚙️ face.raw
 	python transform.py
